--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,6 @@
-
+#data source
+spring.datasource.url=jdbc:mysql://localhost:3306/db-university-query
+spring.datasource.username=root
+spring.datasource.password=rootpassword
+# Serve a dire di non modificare lo schema del database
+spring.jpa.generate-ddl=false
