--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,3 +4,10 @@ spring.datasource.username=root
 spring.datasource.password=rootpassword
 # Serve a dire di non modificare lo schema del database
 spring.jpa.generate-ddl=false
+
+#See sql queries(NOT RECCOMENDED IN PRODUCTION!!!)
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
+
+#Thymeleafe cache
+spring.thymeleaf.cache=false
